[gd_scene load_steps=44 format=3 uid="uid://chtrakimjp4b0"]

[ext_resource type="Texture2D" uid="uid://c88n0gfcrd7ay" path="res://sprites/Enemies/Duck/Jump Anticipation (36x36).png" id="1_74uwd"]
[ext_resource type="Texture2D" uid="uid://csgmwuvuqn28x" path="res://sprites/Enemies/Duck/Idle (36x36).png" id="1_n7d4t"]
[ext_resource type="Texture2D" uid="uid://c0n0ca12t7vwe" path="res://sprites/Enemies/Duck/Fall (36x36).png" id="1_tvl5e"]
[ext_resource type="Script" path="res://scripts/enemies/mob.gd" id="1_v2d7w"]
[ext_resource type="Script" path="res://scripts/state_label.gd" id="2_k8fgk"]
[ext_resource type="Texture2D" uid="uid://b81463vys5r7f" path="res://sprites/Enemies/Duck/Jump (36x36).png" id="3_hsbt8"]
[ext_resource type="Texture2D" uid="uid://c4ixpn7iay71p" path="res://sprites/Enemies/Duck/Hit (36x36).png" id="3_y5e1y"]
[ext_resource type="Texture2D" uid="uid://cox88sgbq7l5w" path="res://sprites/Dust Particle.png" id="6_01dbe"]
[ext_resource type="Script" path="res://scripts/enemies/state_animation.gd" id="9_2sbok"]
[ext_resource type="Script" path="res://scripts/enemies/jump_vision.gd" id="9_wr2cv"]
[ext_resource type="Script" path="res://scripts/enemies/duck_state_machine.gd" id="9_yr110"]
[ext_resource type="Script" path="res://scripts/enemies/in_air_mob_state.gd" id="11_e46he"]
[ext_resource type="Script" path="res://scripts/enemies/duck_idle_state.gd" id="11_lbwkr"]
[ext_resource type="Script" path="res://scripts/enemies/anticipation_state.gd" id="13_x1p5w"]
[ext_resource type="Script" path="res://scripts/enemies/grounded/grounded_dead_state.gd" id="15_tmmpl"]
[ext_resource type="Script" path="res://scenes/enemies/duck_grounded_state.gd" id="16_pmhs3"]
[ext_resource type="Script" path="res://scripts/hit_box.gd" id="17_841vd"]
[ext_resource type="Script" path="res://scripts/hurt_box.gd" id="18_r5got"]

[sub_resource type="LabelSettings" id="LabelSettings_vutt1"]
font_size = 8

[sub_resource type="RectangleShape2D" id="RectangleShape2D_354ed"]
size = Vector2(22, 29)

[sub_resource type="AtlasTexture" id="AtlasTexture_1h7pd"]
atlas = ExtResource("1_74uwd")
region = Rect2(0, 0, 36, 36)

[sub_resource type="AtlasTexture" id="AtlasTexture_7xxlu"]
atlas = ExtResource("1_74uwd")
region = Rect2(36, 0, 36, 36)

[sub_resource type="AtlasTexture" id="AtlasTexture_gsms3"]
atlas = ExtResource("1_74uwd")
region = Rect2(72, 0, 36, 36)

[sub_resource type="AtlasTexture" id="AtlasTexture_e61p6"]
atlas = ExtResource("1_74uwd")
region = Rect2(108, 0, 36, 36)

[sub_resource type="AtlasTexture" id="AtlasTexture_548ha"]
atlas = ExtResource("3_y5e1y")
region = Rect2(0, 0, 36, 36)

[sub_resource type="AtlasTexture" id="AtlasTexture_037cu"]
atlas = ExtResource("3_y5e1y")
region = Rect2(36, 0, 36, 36)

[sub_resource type="AtlasTexture" id="AtlasTexture_k0rmd"]
atlas = ExtResource("3_y5e1y")
region = Rect2(72, 0, 36, 36)

[sub_resource type="AtlasTexture" id="AtlasTexture_stki3"]
atlas = ExtResource("3_y5e1y")
region = Rect2(108, 0, 36, 36)

[sub_resource type="AtlasTexture" id="AtlasTexture_rj6h5"]
atlas = ExtResource("3_y5e1y")
region = Rect2(144, 0, 36, 36)

[sub_resource type="AtlasTexture" id="AtlasTexture_r0agn"]
atlas = ExtResource("1_n7d4t")
region = Rect2(0, 0, 36, 36)

[sub_resource type="AtlasTexture" id="AtlasTexture_isnae"]
atlas = ExtResource("1_n7d4t")
region = Rect2(36, 0, 36, 36)

[sub_resource type="AtlasTexture" id="AtlasTexture_0u215"]
atlas = ExtResource("1_n7d4t")
region = Rect2(72, 0, 36, 36)

[sub_resource type="AtlasTexture" id="AtlasTexture_m2oa1"]
atlas = ExtResource("1_n7d4t")
region = Rect2(108, 0, 36, 36)

[sub_resource type="AtlasTexture" id="AtlasTexture_v54kl"]
atlas = ExtResource("1_n7d4t")
region = Rect2(144, 0, 36, 36)

[sub_resource type="AtlasTexture" id="AtlasTexture_u0qc2"]
atlas = ExtResource("1_n7d4t")
region = Rect2(180, 0, 36, 36)

[sub_resource type="AtlasTexture" id="AtlasTexture_mo4nm"]
atlas = ExtResource("1_n7d4t")
region = Rect2(216, 0, 36, 36)

[sub_resource type="AtlasTexture" id="AtlasTexture_ywhw0"]
atlas = ExtResource("1_n7d4t")
region = Rect2(252, 0, 36, 36)

[sub_resource type="AtlasTexture" id="AtlasTexture_dvdlf"]
atlas = ExtResource("1_n7d4t")
region = Rect2(288, 0, 36, 36)

[sub_resource type="AtlasTexture" id="AtlasTexture_jw2ob"]
atlas = ExtResource("1_n7d4t")
region = Rect2(324, 0, 36, 36)

[sub_resource type="SpriteFrames" id="SpriteFrames_fe5u8"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_1h7pd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7xxlu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gsms3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e61p6")
}],
"loop": false,
"name": &"anticipate",
"speed": 20.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("1_tvl5e")
}],
"loop": true,
"name": &"fall",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_548ha")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_037cu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k0rmd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_stki3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rj6h5")
}],
"loop": false,
"name": &"hit",
"speed": 20.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_r0agn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_isnae")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0u215")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m2oa1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_v54kl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u0qc2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mo4nm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ywhw0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dvdlf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jw2ob")
}],
"loop": false,
"name": &"idle",
"speed": 20.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_hsbt8")
}],
"loop": true,
"name": &"jump",
"speed": 5.0
}]

[sub_resource type="Gradient" id="Gradient_tgecb"]
colors = PackedColorArray(1, 1, 1, 1, 1, 1, 1, 0)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_xigmw"]
size = Vector2(26, 15)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_lgf0q"]
size = Vector2(26, 14)

[node name="Duck" type="CharacterBody2D" node_paths=PackedStringArray("to_flip") groups=["mob"]]
collision_layer = 16
script = ExtResource("1_v2d7w")
to_flip = NodePath("ToFlip")

[node name="Label" type="Label" parent="." node_paths=PackedStringArray("state_machine")]
visible = false
offset_left = -24.0
offset_top = -26.0
offset_right = 24.0
offset_bottom = -9.0
text = "State"
label_settings = SubResource("LabelSettings_vutt1")
horizontal_alignment = 1
script = ExtResource("2_k8fgk")
state_machine = NodePath("../MobStateMachine")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(0, 3.5)
shape = SubResource("RectangleShape2D_354ed")

[node name="ToFlip" type="Node2D" parent="."]
z_index = 5

[node name="Animator" type="AnimatedSprite2D" parent="ToFlip"]
unique_name_in_owner = true
sprite_frames = SubResource("SpriteFrames_fe5u8")
animation = &"idle"
autoplay = "idle"

[node name="LandParticles" type="CPUParticles2D" parent="ToFlip"]
unique_name_in_owner = true
position = Vector2(0, 16)
emitting = false
lifetime = 0.2
one_shot = true
explosiveness = 1.0
texture = ExtResource("6_01dbe")
emission_shape = 5
emission_points = PackedVector2Array(8, 0, -8, 0)
emission_normals = PackedVector2Array(3, -1, -3, -1)
emission_colors = PackedColorArray()
direction = Vector2(0, 0)
spread = 10.0
gravity = Vector2(0, 0)
initial_velocity_min = 10.0
initial_velocity_max = 10.0
scale_amount_min = 0.3
scale_amount_max = 0.8
color_ramp = SubResource("Gradient_tgecb")

[node name="JumpParticles" type="CPUParticles2D" parent="ToFlip"]
unique_name_in_owner = true
position = Vector2(0, 16)
emitting = false
amount = 5
lifetime = 0.2
one_shot = true
explosiveness = 1.0
texture = ExtResource("6_01dbe")
emission_shape = 3
emission_rect_extents = Vector2(8, 1)
direction = Vector2(0, -1)
spread = 15.0
gravity = Vector2(0, 0)
initial_velocity_min = 100.0
initial_velocity_max = 150.0
scale_amount_min = 0.3
scale_amount_max = 0.8
color_ramp = SubResource("Gradient_tgecb")

[node name="Vision" type="Node2D" parent="ToFlip"]
unique_name_in_owner = true
script = ExtResource("9_wr2cv")

[node name="WallCheck" type="RayCast2D" parent="ToFlip/Vision"]
position = Vector2(0, -16)
target_position = Vector2(-35, 0)

[node name="MobStateMachine" type="Node" parent="."]
script = ExtResource("9_yr110")
starting_state = "grounded/idle"

[node name="GroundedState" type="Node" parent="MobStateMachine"]
script = ExtResource("16_pmhs3")

[node name="IdleState" type="Node" parent="MobStateMachine/GroundedState" node_paths=PackedStringArray("animated_sprite")]
script = ExtResource("11_lbwkr")
animated_sprite = NodePath("../../../ToFlip/Animator")
state_id = "idle"
animation = &"idle"

[node name="AnticipationState" type="Node" parent="MobStateMachine/GroundedState" node_paths=PackedStringArray("animated_sprite")]
script = ExtResource("13_x1p5w")
animated_sprite = NodePath("../../../ToFlip/Animator")
state_id = "anticipate"
animation = &"anticipate"

[node name="InAirState" type="Node" parent="MobStateMachine"]
script = ExtResource("11_e46he")

[node name="FallState" type="Node" parent="MobStateMachine/InAirState" node_paths=PackedStringArray("animated_sprite")]
script = ExtResource("9_2sbok")
animated_sprite = NodePath("../../../ToFlip/Animator")
state_id = "fall"
animation = &"fall"

[node name="JumpState" type="Node" parent="MobStateMachine/InAirState" node_paths=PackedStringArray("animated_sprite")]
script = ExtResource("9_2sbok")
animated_sprite = NodePath("../../../ToFlip/Animator")
state_id = "jump"
animation = &"jump"

[node name="MobDeadState" type="Node" parent="MobStateMachine" node_paths=PackedStringArray("animated_sprite")]
script = ExtResource("15_tmmpl")
animated_sprite = NodePath("../../ToFlip/Animator")
animation = &"hit"

[node name="HitBox" type="Area2D" parent="."]
unique_name_in_owner = true
collision_layer = 1024
collision_mask = 512
script = ExtResource("17_841vd")

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBox"]
position = Vector2(0, 10.5)
shape = SubResource("RectangleShape2D_xigmw")
debug_color = Color(0.85098, 0, 0.027451, 0.419608)

[node name="HurtBox" type="Area2D" parent="."]
unique_name_in_owner = true
collision_layer = 2048
collision_mask = 256
script = ExtResource("18_r5got")

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtBox"]
position = Vector2(0, -4)
shape = SubResource("RectangleShape2D_lgf0q")
debug_color = Color(0.803922, 0.419608, 0, 0.419608)

[connection signal="state_entered" from="MobStateMachine/InAirState/JumpState" to="MobStateMachine/InAirState" method="_on_jump_state_state_entered"]
